--- a/web/app/.babelrc
+++ b/web/app/.babelrc
@@ -1,10 +1,8 @@
 {
     "presets":[
-        "es2015", "react"
+        "env", "react-app"
     ],
     "plugins": [
         ["import", { "libraryName": "antd", "style": "css" }], // `style: true` for less
-        ["syntax-object-rest-spread"],
-        ["transform-object-rest-spread"]
     ]
 }
