--- a/web/app/package.json
+++ b/web/app/package.json
@@ -5,8 +5,6 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.1.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "chai": "^4.1.2",
     "d3": "^4.11.0",
     "enzyme": "^3.3.0",
@@ -39,6 +37,10 @@
     "babel-plugin-import": "^1.5.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react-app": "^3.1.1",
     "css-loader": "^0.28.7",
     "eslint": "^4.12.1",
     "eslint-loader": "^1.9.0",
