--- a/proxy/Cargo.toml
+++ b/proxy/Cargo.toml
@@ -23,7 +23,7 @@ futures-watch = { git = "https://github.com/carllerche/better-future.git" }
 h2 = "0.1.6"
 http = "0.1"
 httparse = "1.2"
-hyper = { version = "0.11.22", default-features = false, features = ["compat"] }
+hyper = { git = "https://github.com/hyperium/hyper" }
 ipnet = "1.0"
 log = "0.4.1"
 indexmap = "1.0.0"
@@ -32,14 +32,13 @@ rand = "0.4"
 # for config parsing
 regex = "1.0.0"
 
-tokio-core = "0.1"
-tokio-io = "0.1"
-tokio-signal = "0.1"
+tokio = "0.1.6"
+tokio-signal = { git = "https://github.com/alexcrichton/tokio-signal.git", rev = "7ecaa90dfe21edb1afa48c0173cbee6c3c210130"}
 
 prost = "0.3.0"
 prost-types = "0.3.0"
 
-trust-dns-resolver = { version = "0.8.2", default-features = false, git = "https://github.com/bluejekyll/trust-dns", branch = "0.8_release" }
+trust-dns-resolver = { default-features = false, git = "https://github.com/bluejekyll/trust-dns", branch = "master" }
 
 #futures-watch   = { git = "https://github.com/carllerche/better-future" }
 
@@ -49,7 +48,7 @@ tower-balance         = { git = "https://github.com/tower-rs/tower" }
 tower-buffer          = { git = "https://github.com/tower-rs/tower" }
 tower-discover        = { git = "https://github.com/tower-rs/tower" }
 tower-grpc            = { git = "https://github.com/tower-rs/tower-grpc" }
-tower-h2              = { git = "https://github.com/tower-rs/tower-h2" }
+tower-h2              = { git = "https://github.com/tower-rs/tower-h2", branch = "eliza/new-tokio" }
 tower-reconnect       = { git = "https://github.com/tower-rs/tower" }
 tower-in-flight-limit = { git = "https://github.com/tower-rs/tower" }
 tower-util            = { git = "https://github.com/tower-rs/tower" }
@@ -61,3 +60,6 @@ libc = "0.2"
 quickcheck = { version = "0.6", default-features = false }
 conduit-proxy-controller-grpc = { path = "./controller-grpc" , features = ["arbitrary"] }
 flate2 = { version = "1.0.1", default-features = false, features = ["rust_backend"] }
+# `tokio-io` is needed for TCP tests, because `tokio::io` doesn't re-export
+# the `read` function.
+tokio-io = "0.1.6"
